--- a/FlipFlop/html/description.html
+++ b/FlipFlop/html/description.html
@@ -32,7 +32,7 @@
         <button class="l_button" type="button">Entrar</button>
     </div>
     <div class="content">
-        <a class="button light-border" href="../index.html">
+        <a class="button light-border" href="../,index.html">
             <i class="fa fa-list fa-fw fa-3x" aria-hidden="true"></i>
             <span class="text button-text">Volver a la busqueda</span>
         </a>
